--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site",
-  "homepage": "https://gitname.github.io/",
+  "homepage": "https://butterman0423.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
